--- a/index.html
+++ b/index.html
@@ -4,6 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+    <script>
+      alert("Click 'Ok' for the page to load");
+    </script>
+
+    <style>
+      body {
+        background-color: lightgray;
+      }
+
+      h1 {
+        color: black;
+        text-align: center;
+      }
+
+      p {
+        font-family: verdana;
+        font-size: 20px;
+      }
+    </style>
+
     <title>Arellano Kevin</title>
   </head>
   <body>
