Updated name on title - Adjusted name on title.

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       }
     </style>
 
-    <title>Arellano Kevin</title>
+    <title>Kev Arellano</title>
   </head>
   <body>
-    <h1>Arellano Kevin</h1>
+    <h1>Kevin Arellano</h1>
   </body>
 </html>
